--- a/public/Styles/styles.scss
+++ b/public/Styles/styles.scss
@@ -1,292 +1,364 @@
 @mixin center() {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 @mixin gameCenter() {
-    position: absolute;
-    width: 100%;
-    height: 74vh;
-    margin-top: -74vh;
+  position: absolute;
+  width: 100%;
+  height: 74vh;
+  margin-top: -74vh;
 }
 
-@mixin sectionBackgrounds(){
-    background-color: #a8dadc;
-    width: 50%;
-    height: 80%;
-    padding: 20px;
-    text-align: center;
-    @include center();
-    flex-direction: column;
-    justify-content: space-between;
+@mixin sectionBackgrounds() {
+  background-color: #a8dadc;
+  width: 50%;
+  height: 80%;
+  padding: 20px;
+  text-align: center;
+  @include center();
+  flex-direction: column;
+  justify-content: space-between;
 }
 //*****reset styling*****
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 //*****Add font*****
 @font-face {
-    font-family: speedFont;
-    src: url(../Assets/SFSpeedwaystarBold.ttf);
-  }
+  font-family: speedFont;
+  src: url(../Assets/SFSpeedwaystarBold.ttf);
+}
 
-  body {
-      font-family: speedFont, sans-serif;
-  }
+body {
+  font-family: speedFont, sans-serif;
+}
 
-  html, body {
-    overflow-x: hidden !important;
-    scroll-behavior: smooth;
-  }
+html,
+body {
+  overflow-x: hidden !important;
+  scroll-behavior: smooth;
+}
 
-//*****All buttons*****  
-  button {
-    font-family: speedFont, sans-serif;
-    border: none;
-    background-color: transparent;
-    color: #457b9d;
-    &:hover {
-        cursor: pointer;
-        color: #7daecc;
-    }
+//*****All buttons*****
+button {
+  font-family: speedFont, sans-serif;
+  border: none;
+  background-color: transparent;
+  color: #457b9d;
+  &:hover {
+    cursor: pointer;
+    color: #7daecc;
   }
+}
 
-//*****HEADER SECTION*****  
+//*****HEADER SECTION*****
 .header {
-    height: 10vh;
-    @include center();
-    h1 {
-        color: #457b9d;
-        font-size: 40px;
-    }
+  height: 10vh;
+  @include center();
+  h1 {
+    color: #457b9d;
+    font-size: 40px;
+  }
 }
 
 //*****GAME SECTION*****
 .game {
-    height: 80vh;
-    background-color: rgb(206, 206, 206);
-    //*****TRACK*****
-    .track {
-        background-color: red;
-        width: 100%;
-        height: 3vh;
+  height: 80vh;
+  background-color: rgb(206, 206, 206);
+  //*****TRACK*****
+  .track {
+    background-color: red;
+    width: 100%;
+    height: 3vh;
+  }
+  //*****CARS*****
+  .cars {
+    display: flex;
+    height: 74vh;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 10px;
+    img {
+      width: 10%;
+      position: relative;
+      left: 0;
+      z-index: 1;
     }
-    //*****CARS*****
-    .cars {
+  }
+  //*****START*****
+  .begin {
+    @include gameCenter();
+    @include center();
+    button {
+      font-size: 150px;
+      border: none;
+      background-color: transparent;
+      color: #457b9d;
+      &:hover {
+        cursor: pointer;
+        color: #7daecc;
+      }
+    }
+  }
+
+  //*****SELECTION*****
+  .selection {
+    @include gameCenter();
+    @include center();
+    display: none;
+    .selection_background {
+      @include sectionBackgrounds();
+      h3 {
+        color: #457b9d;
+        font-size: 40px;
+      }
+      span {
+        color: red;
+      }
+      form {
+        ul {
+          @include center();
+          li {
+            padding: 20px;
+            list-style: none;
+            font-size: 25px;
+          }
+          #green_car {
+            color: green;
+          }
+          #orange_car {
+            color: orange;
+          }
+          #red_car {
+            color: red;
+          }
+          #yellow_car {
+            color: yellow;
+          }
+        }
+      }
+      button {
+        font-size: 30px;
+      }
+    }
+  }
+
+  //*****INFORMATION BOARD*****
+  .information {
+    @include gameCenter();
+    @include center();
+    display: none;
+    .information_background {
+      @include sectionBackgrounds();
+      h3 {
+        color: #457b9d;
+        font-size: 40px;
+      }
+      ul {
+        color: #457b9d;
+        li {
+          padding: 10px;
+          font-size: 20px;
+          list-style: none;
+        }
+      }
+    }
+  }
+
+  //*****WIN/LOSE DISPLAY*****
+  .winner {
+    @include gameCenter();
+    @include center();
+    display: none;
+    .winner_background {
+      @include sectionBackgrounds();
+      justify-content: center;
+      h3 {
+        color: #457b9d;
+        font-size: 60px;
+      }
+      .reveal,
+      .options {
+        padding: 20px;
+      }
+      .options {
+        button {
+          font-size: 20px;
+          padding: 20px;
+        }
+      }
+    }
+  }
+
+  //*****FINISH LINE*****
+  .finish {
+    @include gameCenter();
+    @include center();
+    background-color: brown;
+    width: 5vw;
+    right: 0;
+    .finish_background {
+      background-color: #457b9d;
+      height: 74vh;
+      width: 5vw;
+      ul {
         display: flex;
-        height: 74vh;
         flex-direction: column;
         justify-content: space-between;
-        padding-top: 10px;
-        img {
-            width: 10%;
-            position: relative;
-            left: 0;
-            z-index: 1;
-            
+        padding: 5px;
+        height: 74vh;
+        text-align: center;
+        li {
+          list-style: none;
+          font-size: 30px;
+          color: white;
         }
+      }
     }
-    //*****START*****
-    .begin {
-        @include gameCenter();
-        @include center();
-        button {
-            font-size: 150px;
-            border: none;
-            background-color: transparent;
-            color: #457b9d;
-            &:hover {
-                cursor: pointer;
-                color: #7daecc;
-            }
-        }
-    }
-
-    //*****SELECTION*****
-    .selection {
-        @include gameCenter();
-        @include center();
-        display: none;
-        .selection_background {
-            @include sectionBackgrounds();
-            h3 {
-                color: #457b9d;
-                font-size: 40px;
-            }
-            span {
-                color: red;
-            }
-            form {
-                ul {
-                    @include center();
-                    li {
-                        padding: 20px;
-                        list-style: none;
-                        font-size: 25px;
-                    }
-                    #green_car {
-                        color: green;
-                    }
-                    #orange_car {
-                        color: orange;
-                    }
-                    #red_car {
-                        color: red;
-                    }
-                    #yellow_car {
-                        color: yellow;
-                    }
-                }
-            }
-            button {
-                font-size: 30px;
-            }
-        }
-    }
-
-    //*****INFORMATION BOARD*****
-    .information {
-        @include gameCenter();
-        @include center();
-        display: none;
-        .information_background {
-            @include sectionBackgrounds();
-            h3 {
-                color: #457b9d;
-                font-size: 40px;
-            }
-            ul {
-                color: #457b9d;
-                li {
-                    padding: 10px;
-                    font-size: 20px;
-                    list-style: none;
-                }
-            }
-        }
-    }
-
-    //*****WIN/LOSE DISPLAY*****
-    .winner {
-        @include gameCenter();
-        @include center();
-        display: none;
-        .winner_background {
-            @include sectionBackgrounds();
-            justify-content: center;
-            h3 {
-                color: #457b9d;
-                font-size: 60px;
-            }
-            .reveal, .options {
-                padding: 20px;
-            }
-            .options {
-                button {
-                    font-size: 20px;
-                    padding: 20px;
-                }
-            }
-        }
-    }
-
-    //*****FINISH LINE*****
-    .finish {
-        @include gameCenter();
-        @include center();
-        background-color: brown;
-        width: 5vw;
-        right: 0;
-        .finish_background {
-            background-color: #457b9d;
-            height: 74vh;
-            width: 5vw;
-            ul {
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                padding: 5px;
-                height: 74vh;
-                text-align: center;
-                li {
-                    list-style: none;
-                    font-size: 30px;
-                    color: white;
-                }
-            }
-        }
-    }
+  }
 }
-
-
 
 //*****INFORMATION/FOOTER SECTION*****
 .footer {
-    height: 10vh;
-    @include center();
-    button {
-        font-size: 20px;
-    }
+  height: 10vh;
+  @include center();
+  button {
+    font-size: 20px;
+  }
 }
 
-//*****MOBILE DEVICE VIEW*****
+//*****MOBILE DEVICE VIEW TABLET*****
 @media screen and (max-width: 1024px) and (orientation: landscape) {
-
-    .header {
-        h1 {
-            font-size: 20px;
-        }
-    }
-
-    .game {
-        .information {
-            .information_background {
-                h3 {
-                    font-size: 20px;
-                }
-                ul li {
-                    font-size: 10px;
-                }
-            }
-        }
-        .begin {
-            button {
-                font-size: 120px;
-            }
-        }
-        .selection {
-            .selection_background {
-                h3 {
-                    font-size: 20px;
-                }
-                form ul li {
-                    font-size: 15px;
-                }
-                button {
-                    font-size: 15px;
-                }
-            }
-        }
-        .winner {
-            .winner_background {
-                .reveal {
-                    h3 {
-                        font-size: 20px;
-                    }
-                    p {
-                        font-size: 10px;
-                    }
-                }
-                .options {
-                    button {
-                        font-size: 15px;
-                    }
-                }
-            }
-        }
+  .header {
+    h1 {
+      font-size: 20px;
     }
   }
+
+  .game {
+    .information {
+      .information_background {
+        h3 {
+          font-size: 20px;
+        }
+        ul li {
+          font-size: 10px;
+        }
+      }
+    }
+    .begin {
+      button {
+        font-size: 120px;
+      }
+    }
+    .selection {
+      .selection_background {
+        h3 {
+          font-size: 20px;
+        }
+        form ul li {
+          font-size: 15px;
+        }
+        button {
+          font-size: 15px;
+        }
+      }
+    }
+    .winner {
+      .winner_background {
+        .reveal {
+          h3 {
+            font-size: 20px;
+          }
+          p {
+            font-size: 10px;
+          }
+        }
+        .options {
+          button {
+            font-size: 15px;
+          }
+        }
+      }
+    }
+  }
+}
+
+//*****MOBILE DEVICE VIEW PHONE*****
+@media screen and (max-width: 450px) {
+  .header {
+    h1 {
+      font-size: 20px;
+    }
+  }
+
+  .game {
+    .information {
+      .information_background {
+        width: 80%;
+        h3 {
+          font-size: 20px;
+        }
+        ul li {
+          font-size: 10px;
+        }
+      }
+    }
+    .begin {
+      button {
+        font-size: 80px;
+      }
+    }
+    .selection {
+      .selection_background {
+        width: 80%;
+        h3 {
+          font-size: 20px;
+        }
+        form ul {
+          flex-direction: column;
+          li {
+            font-size: 15px;
+            padding: 5px;
+          }
+        }
+        button {
+          font-size: 15px;
+        }
+      }
+    }
+    .winner {
+      .winner_background {
+        width: 80%;
+        .reveal {
+          h3 {
+            font-size: 20px;
+          }
+          p {
+            font-size: 10px;
+          }
+        }
+        .options {
+          button {
+            font-size: 15px;
+          }
+        }
+      }
+    }
+
+    .finish {
+      .finish_background {
+        ul {
+          li {
+            font-size: 15px;
+          }
+        }
+      }
+    }
+  }
+}
